--- a/main.html
+++ b/main.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 	<ul>
 		<li>Item 1</li>
@@ -17,5 +21,7 @@
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
+
 </body>
+
 </html>
